<resources>
    <string name="app_name">InventariApp</string>
    <string name="landing_start_button">Iniciar</string>
    <string name="landing_welcome_message">Bienvenid@ a InventariApp</string>
    <string name="account_settings_title">Configuración de Usuario</string>
    <string name="account_settings_username_label">Nombre de usuario</string>
    <string name="account_settings_change_password">Cambiar contraseña</string>
    <string name="account_settings_save_changes">Guardar cambios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo_settings_title">Editar foto de perfil</string>
    <string name="photo_settings_new">Nueva foto</string>
    <string name="photo_settings_delete">Eliminar foto</string>
    <string name="password_settings_title">Cambio de contraseña</string>
    <string name="password_settings_save">Guardar</string>
    <string name="password_settings_cancel">Cancelar</string>
    <string name="password_settings_old_password">Contraseña anterior</string>
    <string name="password_settings_new_password">Contraseña nueva</string>
    <string name="password_settings_confirm_new_password">Confirmar contraseña</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Ingrese su correo</string>
    <string name="prompt_user">Ingrese su suario</string>
    <string name="prompt_password">Ingrese su contraseña</string>
    <string name="prompt_passwordRepeat">Repita su contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_up">Registrarse</string>
    <string name="action_register">¿No tienes cuenta con nosotros?</string>
    <string name="action_login">¿Ya tienes una cuenta con nosotros?</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">"Bienvenido"</string>
    <string name="invalid_username">Usuario no valido</string>
    <string name="invalid_password">Al menos debe tener 5 caracteres</string>
    <string name="required_email_field">"Correo electrónico no válido"</string>
    <string name="required_password_field">"Contraseña inválida"</string>
    <string name="login_failed">"Inicio de sesión fallido"</string>
    <string name="calle_falsa_123">Calle falsa 123</string>
    <string name="logout">Cerrar Sesión</string>

    <!-- Fragments-->
    <!--    Home Fragment-->
    <string name="home_fragment_title">Principal</string>


    <!--    Comment Fragment-->
    <string name="comment_fragment_title">Comentarios</string>


    <!--    Product Fragment-->
    <string name="product_fragment_title">Productos</string>


    <!--    Profile Fragment-->
    <string name="profile_fragment_title">Perfíl</string>
    <string name="product_detail_fragment_title">Detalle del producto</string>
    <string name="bottom_nav_menu_home">Principal</string>
    <string name="bottom_nav_menu_product">Producto</string>
    <string name="bottom_nav_menu_comment">Comentarios</string>
    <string name="bottom_nav_menu_profile">Perfil</string>
</resources>