<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/commentFragment"
        android:name="com.nickoperea.inventariapp.ui.fragments.CommentFragment"
        android:label="@string/comment_fragment_title"
        tools:layout="@layout/fragment_comment" />
    <fragment
        android:id="@+id/productFragment"
        android:name="com.nickoperea.inventariapp.ui.fragments.ProductFragment"
        android:label="@string/product_fragment_title"
        tools:layout="@layout/fragment_product" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.nickoperea.inventariapp.ui.fragments.ProfileFragment"
        android:label="@string/profile_fragment_title"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.nickoperea.inventariapp.ui.fragments.HomeFragment"
        android:label="@string/home_fragment_title"
        tools:layout="@layout/fragment_home" />
</navigation>